# FalconRender

./: CMakeLists.txt
src/: CMakeLists.txt
src/FalconRender/: CMakeLists.txt  fragment_shader_base.hpp  line_clipper.hpp  miscmath.inl.hpp  pixel_data.hpp  rasterizer.hpp  rasterizer_vertex.hpp  render.cpp  render.hpp  triangle_clipper.hpp  triangle_edge_equation.hpp  vertex_cache.hpp  vertex_shader_base.hpp
src/examples/: CMakeLists.txt  box_test.cpp  model.hpp  mvp_matrices.hpp  timer.hpp  triangle_test.cpp
